# socfw

./: .gitignore  .svlint.toml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile.common  README.md  legacy_build.py  pyproject.toml
.github/workflows/: ci.yml  golden.yml
docs/architecture/: 00_overview.md  03_bus_and_bridges.md  04_firmware_flow.md  05_irq_model.md  06_packs_and_catalogs.md  07_implementation_convergence.md
docs/dev_notes/: checkpoints.md  cutover_runbook.md  v1_1_roadmap.md  (+5 more)
examples/: README.md
filozofia_navrhu/: example_01.md  example_02.md  example_03.md  filozofia_navrhu_01.md  filozofia_navrhu_02.md  filozofia_navrhu_03.md  filozofia_navrhu_04.md  filozofia_navrhu_05.md  filozofia_navrhu_06.md  filozofia_navrhu_07.md  filozofia_navrhu_08.md  filozofia_navrhu_09.md  filozofia_navrhu_10.md  filozofia_navrhu_100.md  filozofia_navrhu_101.md  filozofia_navrhu_102.md  filozofia_navrhu_103.md  filozofia_navrhu_104.md  filozofia_navrhu_105.md  filozofia_navrhu_106.md  filozofia_navrhu_107.md  filozofia_navrhu_108.md  filozofia_navrhu_109.md  filozofia_navrhu_11.md  filozofia_navrhu_110.md  filozofia_navrhu_111.md  filozofia_navrhu_112.md  filozofia_navrhu_113.md  filozofia_navrhu_114.md  filozofia_navrhu_115.md  filozofia_navrhu_116.md  filozofia_navrhu_117.md  filozofia_navrhu_118.md  filozofia_navrhu_119.md  filozofia_navrhu_12.md  filozofia_navrhu_120.md  filozofia_navrhu_121.md  filozofia_navrhu_122.md  filozofia_navrhu_123.md  filozofia_navrhu_124.md  (+99 more)
legacy/: README.md
scripts/: run_ci_local.sh  run_golden.sh  run_smoke.sh
socfw/: schema_docs.py
(+2086 files in other folders)
